...
            children: [
              MagicAppBar(
                title: isUpdate ? widget.workout!.formattedDate : "New Workout",
                trailing: [
                  MagicIcon(
                    icon: Icons.add_rounded,
                    key: const Key("addSetButton"),
                    onTap: () {
                      final page = SetPage(
                        onSave: (set) {
                          sets.add(set);
                          setState(() {});
                        },
...
                    },
                  );
                }),
              ),
              CustomButton(
                text: isUpdate ? "Update" : "Save",
                key: const Key("saveWorkoutButton"),
                onPressed: () {
                  if (!isUpdate) {
                    final createNotifier = ref.read(
                      createWorkoutProvider.notifier,
                    );
                    createNotifier.createWorkout(sets);
...
