...
                child: Column(
                  children: [
                    Align(
                      alignment: Alignment.centerLeft,
                      child: MagicIcon(
                        icon: Icons.person_rounded,
                        key: const Key("profileButton"),
                        onTap: () {
                          pushTo(context, const ProfilePage());
                        },
                      ),
                    ),
                    Text(
...
                                color: colors.alwaysWhite,
                              ),
                            ),
                          ),
                          MagicIcon(
                            icon: Icons.add_rounded,
                            key: const Key("addWorkoutButton"),
                            onTap: () {
                              pushTo(context, const WorkoutPage());
                            },
                          ),
                        ],
                      ),
...
